--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
+    "popper": "^1.0.1",
     "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
   },
