--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.3.4",
     "vuex": "^3.5.1"
   },
