--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-axios": "^2.1.5",
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.3.4",
+    "vue-sweetalert2": "^3.0.6",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
