--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+        "no-console":"off"
+    }
   },
   "browserslist": [
     "> 1%",
