--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-debounce": "^2.5.7",
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.3.4",
     "vue-sweetalert2": "^3.0.6",
@@ -48,7 +49,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-        "no-console":"off"
+      "no-console": "off"
     }
   },
   "browserslist": [
