--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.19",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "vee-validate": "^3.3.7",
