alex推薦的vue style guide+stylelint

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommanded",
       "@vue/airbnb"
     ],
     "parserOptions": {
