購物結帳頁切版

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
       "no-unused-vars": "off",
       "no-shadow": "off",
       "vue/max-attributes-per-line": "off",
-      "vue/html-indent": "off"
+      "vue/html-self-closing":"off"
     }
   },
   "browserslist": [
