訂單總計+進度條+訂單跳轉頁

--- a/package.json
+++ b/package.json
@@ -67,7 +67,10 @@
       "no-unused-vars": "off",
       "no-shadow": "off",
       "vue/max-attributes-per-line": "off",
-      "vue/html-self-closing": "off"
+      "vue/html-self-closing": "off",
+      "arrow-body-style":["off"],
+      "no-return-assign":["except-parens"]
+
     }
   },
   "browserslist": [
