--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lodash": "^4.17.19",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
+    "quill": "^1.3.7",
+    "sweetalert2": "^10.0.2",
     "swiper": "^6.2.0",
     "vee-validate": "^3.3.9",
     "vue": "^2.6.11",
