--- a/package.json
+++ b/package.json
@@ -72,17 +72,19 @@
         2
       ],
       "max-len": "off",
-      "no-console": "warn",
+      "no-console": "off",
       "no-unused-vars": "warn",
       "no-shadow": "warn",
       "vue/max-attributes-per-line": "off",
       "vue/html-self-closing": "off",
       "arrow-body-style": [
-        "warn"
+        "off"
       ],
       "no-return-assign": [
-        "warn"
-      ]
+        "error"
+      ],
+      "global-require": "off",
+      "no-param-reassign": "off"
     }
   },
   "browserslist": [
