--- a/package.json
+++ b/package.json
@@ -71,10 +71,15 @@
         "error",
         2
       ],
-      "max-len": [1,100,2,{
-        "ignoreComments": true,
-        "ignoreUrls": true
-      }],
+      "max-len": [
+        1,
+        100,
+        2,
+        {
+          "ignoreComments": true,
+          "ignoreUrls": true
+        }
+      ],
       "no-console": "warn",
       "vue/max-attributes-per-line": "warn",
       "vue/html-self-closing": "warn",
