--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
         2,
         {
           "ignoreComments": true,
-          "ignoreUrls": true
+          "ignoreUrls": true,
+          "ignoreStrings": true
         }
       ],
       "no-console": "warn",
