wishList撈取對應產品資料

--- a/package.json
+++ b/package.json
@@ -88,8 +88,9 @@
         "off"
       ],
       "no-return-assign": [
-        "error"
-      ]
+        "warn"
+      ],
+      "no-unused-vars": "warn"
     }
   },
   "browserslist": [
